<resources>
    <string name="app_name" translatable="false">Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="fav">Favorite</string>
    <string name="alerts">Alerts</string>
    <string name="setting">Settings</string>
    <string name="txt_weather">weather</string>
    <string name="txt_degree">degree</string>
    <string name="txt_day">day</string>
    <string name="txt_cloud">cloud</string>
    <string name="cloud">Cloud</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Friday">Friday</string>
    <string name="Thursday">Thursday</string>
    <string name="visibility">Visibility</string>
    <string name="violet">Ultra Violet</string>
    <string name="location">Location</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="language">Language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="temperature">Temperature and Wind Speed</string>
    <string name="kelvin">temp(°k) , WS(m/s)</string>
    <string name="celsius">temp(°c) , WS(m/s)</string>
    <string name="fahrenheit">temp(°f) , WS(ml/h)</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="miles_hour">M/h</string>
    <string name="meter_sec">M/S</string>
    <string name="save">Save</string>
    <string name="date">Date</string>
    <string name="Weather">Weather Today</string>
    <string name="ok">ok</string>
    <string name="StartDate">Start Date</string>
    <string name="EndDate">End Date</string>
    <string name="From">From</string>
    <string name="To">To</string>
    <string name="cancel">Cancel</string>

</resources>